diff --git a/src/utilcode/CMakeLists.txt b/src/utilcode/CMakeLists.txt
index 9d35a7e..02d878a 100644
--- a/src/utilcode/CMakeLists.txt
+++ b/src/utilcode/CMakeLists.txt
@@ -134,4 +134,4 @@ endif(CLR_CMAKE_PLATFORM_UNIX)
 add_subdirectory(dac)
 add_subdirectory(dyncrt)
 add_subdirectory(staticnohost)
-add_subdirectory(crossgen)
+
